invisiblestatusbar.safariextension/invisiblestatusbar.css
/* ---- Global styles ---- */
isb {
	display: block;
	bottom: 0;
	right: 0;
	left: 0;
	visibility: hidden;
	opacity: 0;
	background: white;
	color: black;
	position: fixed;
	z-index: 999999999;
	max-width: 90%;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	-webkit-transition: opacity 250ms ease-in-out;
	text-align: left;
}
isb[side=right] {
	left: auto;
}
isb[side=left] {
	right: auto;
}
isb isb_span {
	color: rgba(0, 0, 0, 0.6);
}

/* ---- Classic Theme ---- */

isb[theme=classic] {
	padding: 0.5em !important;
	bottom: 0;
	left: 0;
	right: 0;
	font: 10px "lucida grande", arial !important;
	background: #ccc;
	-webkit-border-top-right-radius: 0.5em;
	-webkit-border-top-left-radius: 0.5em;
	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
}
isb[theme=classic][side=right] {
	left: auto;
	-webkit-border-top-right-radius: 0;
}
isb[theme=classic][side=left] {
	right: auto;
	-webkit-border-top-left-radius: 0;
}
isb[theme=classic] isb_span {
}


/* ---- Safari Theme ---- */

isb[theme=safari] {
	padding: 1px 12px !important;
	font: 10px/13px "lucida grande" !important;
	background: -webkit-gradient(linear, left top, left bottom, from(#bbb), to(#aaa));
	border-top: 1px solid #ccc;
	outline: 1px solid rgba(0, 0, 0, 0.5) !important;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
}

/* ---- Chrome Theme ---- */

isb[theme=chrome] {
	padding: 2px 4px 3px !important;
	font: 11px/11px "lucida grande" !important;
	background: #eee;
	border: 1px solid #aaa;
	border-bottom-width: 0;
	width: 32%;
	-webkit-border-top-right-radius: 4px;
	-webkit-border-top-left-radius: 4px;
}
isb[theme=chrome][side=right] {
	left: auto;
	border-right-width: 0;
	-webkit-border-top-right-radius: 0;
}
isb[theme=chrome][side=left] {
	right: auto;
	border-left-width: 0;
	-webkit-border-top-left-radius: 0;
}

/* ---- Dock Theme ---- */

isb[theme=dock] {
	padding: 8px !important;
	bottom: -2px;
	left: -2px;
	right: -2px;
	font: 11px "lucida grande", arial !important;
	background: rgba(0, 0, 0, 0.75);
	border: 2px solid rgba(255, 255, 255, 0.75);
	border-bottom-width: 0;
	-webkit-border-top-right-radius: 8px;
	-webkit-border-top-left-radius: 8px;
	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
	color: white !important;
}

isb[theme=dock][side=right] {
	left: auto;
	border-right-width: 0;
	-webkit-border-top-right-radius: 0;
}
isb[theme=dock][side=left] {
	right: auto;
	border-left-width: 0;
	-webkit-border-top-left-radius: 0;
}
isb[theme=dock] isb_span {
	color: rgba(255, 255, 255, 0.6) !important;
}

